# garden-cms

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  app.py  compose.yaml  main.py  piccolo_conf.py  pyproject.toml
cms/: __init__.py  catalog.py  css_frameworks.py  engine.py  expressions.py  markdown.py  media.py  renderer.py  site_context.py  storage.py
components/: CollectionFeed.jinja  MediaImage.jinja  Nav.jinja
data/md/docs/: _layout.jinja  authentication.md  collections.md  configuration.md  content-blocks.md  deployment.md  getting-started.md  index.md  installation.md  markdown-mounts.md  media.md  pages.md  templates.md  themes.md
db/: connection.py  piccolo_app.py  schema.py  tables.py
db/piccolo_migrations/: db_2026_04_03t18_32_23_313444.py  db_2026_04_08t12_42_48_295716.py  db_2026_04_09t11_10_52_250109.py  db_2026_04_09t20_22_44_724945.py  db_2026_04_10t09_00_00_000000.py
docs/superpowers/plans/: 2026-04-03-personal-site-scaffold.md
middleware/: auth.py  htmx.py  oauth.py
routes/: __init__.py  admin.py  api.py  blog.py  media.py  pages.py  projects.py
scripts/: export_db_views.py  generate_seed_constants.py
scripts/snapshots/: db_views_snapshot.before.json
static/: logo.xcf
static/css/: theme.css
templates/: CollectionFeed.jinja
templates/admin/: collection_edit.html  collections.html  content.html  dashboard.html  item_edit.html  items.html  login.html  md_mounts.html  media.html  page_edit.html  pages.html  settings.html  theme_edit.html  themes.html
templates/htmx/admin/: post_row.html  project_row.html
templates/layout/: admin.html  base.html
templates/pages/: blog.html  contact.html  index.html  post.html  projects.html  resume.html
templates/partials/: blog_card.html  footer.html  nav.html  project_card.html
tests/: conftest.py  test_auth.py  test_cms.py  test_db.py  test_htmx.py  test_oauth.py  test_routes.py
(+12 files in other folders)
