[project]
name = "garden-cms"
version = "0.2.0"
description = "DB backed dynamic content management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[cryptography,jinja,standard]>=2.16.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.2.2",
    "piccolo[postgres]>=1.0.0",
    "piccolo_api>=1.0.0",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "authlib>=1.3.0",
    "aioboto3>=15.5.0",
    "jinjax>=0.63",
    "markdown>=3.7",
    "syncwrap>=0.0.1",
]

[project.optional-dependencies]
s3 = ["aioboto3>=13.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "piccolo[sqlite]",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
